--- a/helm/spring-petclinic-kubernetes/templates/deployment.yaml
+++ b/helm/spring-petclinic-kubernetes/templates/deployment.yaml
@@ -59,3 +59,5 @@ spec:
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
+      imagePullSecrets:
+      - name: {{ .Values.image.imagePullSecrets }}
