--- a/helm/spring-petclinic-kubernetes/values.admin-server.yaml
+++ b/helm/spring-petclinic-kubernetes/values.admin-server.yaml
@@ -8,6 +8,7 @@ image:
   repository: registry.gitlab.com/opentracing-workshop/spring-petclinic-kubernetes/spring-petclinic-admin-server
   tag: latest
   pullPolicy: Always
+  imagePullSecrets: regcred
 
 nameOverride: ""
 fullnameOverride: ""
@@ -38,3 +39,4 @@ resources:
 nodeSelector: {}
 tolerations: []
 affinity: {}
+
