--- a/helm/spring-petclinic-kubernetes/values.customers-service.yaml
+++ b/helm/spring-petclinic-kubernetes/values.customers-service.yaml
@@ -8,6 +8,7 @@ image:
   repository: registry.gitlab.com/opentracing-workshop/spring-petclinic-kubernetes/spring-petclinic-customers-service
   tag: latest
   pullPolicy: Always
+  imagePullSecrets: regcred
 
 nameOverride: ""
 fullnameOverride: ""
