--- a/spring-petclinic-owners-service/src/main/resources/application.yml
+++ b/spring-petclinic-owners-service/src/main/resources/application.yml
@@ -4,27 +4,27 @@ server.port: 8080
 logging.level.org.springframework: INFO
 
 # Spring Config
-spring:
-  application:
-    name: owners-service
-  config:
-    name: configserver
-  cloud:
-    config:
-      enabled: false
-  boot:
-    admin:
-      client:
-        auto-deregistration: true
-        url: "http://admin-server:8080"
-        instance:
-          prefer-ip: true
+#spring:
+#  application:
+#    name: owners-service
+#  config:
+#    name: configserver
+#  cloud:
+#    config:
+#      enabled: false
+#  boot:
+#    admin:
+#      client:
+#        auto-deregistration: true
+#        url: "http://admin-server:8080"
+#        instance:
+#         prefer-ip: true
 
-customers-service:
-  ribbon:
-    eureka:
-      enabled: false
-visits-service:
-  ribbon:
-    eureka:
-      enabled: false
+#customers-service:
+#  ribbon:
+#    eureka:
+#      enabled: false
+#visits-service:
+#  ribbon:
+#    eureka:
+#      enabled: false
